# token-orb

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release-tag.sh  sync-release-metadata.mjs
src/: App.spec.ts  App.vue  styles.css  sync-release-metadata.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_icon_rgba.rs
src/domain/: settings.ts  sub2apiClient.ts  tokenMetrics.spec.ts  tokenMetrics.ts
